# pdm-version

./: README.md  pdm_version.py  pyproject.toml
.github/workflows/: pypi.yaml
