[project]
name = "pdm-version"
version = "1.0.0"
description = "Make `pdm version` like `poetry version`"
authors = [
    {name = "abersheeran", email = "me@abersheeran.com"},
]
dependencies = [
    "pdm~=1.8",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "Apache2.0"}

[project.urls]
homepage = "https://github.com/abersheeran/pdm-version"

[project.entry-points.pdm]
version = "pdm_version:version"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
