[project]
name = "pdm-version"
version = "2.1.0"
description = "Make `pdm version` like `poetry version`"
authors = [
    {name = "abersheeran", email = "me@abersheeran.com"},
]
dependencies = [
    "pdm>=2.3.1,<3.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache2.0"}

[project.urls]
homepage = "https://github.com/abersheeran/pdm-version"

[project.entry-points.pdm]
version = "pdm_version:version"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
plugins = [
    "-e file:///${PROJECT_ROOT}"
]
